add most features